tests/neg/i17183.check
-- [E081] Type Error: tests/neg/i17183.scala:11:24 ---------------------------------------------------------------------
11 |def test = Context(f = (_, _) => ???) // error // error
   |                        ^
   |                        Missing parameter type
   |
   |                        I could not infer the type of the parameter _$1
   |                        in expanded function:
   |                          (_$1, _$2) => ???
   |                        Expected type for the whole anonymous function:
   |                          MyFunc
-- [E081] Type Error: tests/neg/i17183.scala:11:27 ---------------------------------------------------------------------
11 |def test = Context(f = (_, _) => ???) // error // error
   |                           ^
   |                           Missing parameter type
   |
   |                           I could not infer the type of the parameter _$2
   |                           in expanded function:
   |                             (_$1, _$2) => ???
   |                           Expected type for the whole anonymous function:
   |                             MyFunc
